--- a/uniqus-website/index.html
+++ b/uniqus-website/index.html
@@ -51,40 +51,39 @@
         <section id="hero" class="hero section-padding">
             <div class="container hero-container">
                 <div class="hero-content">
-                    <h1 class="hero-title" id="typing-tagline"><span class="tagline-hidden">-----------------</span>
-                    </h1>
-                    <p class="hero-subtitle tagline-hidden" id="hero-subtitle">Bridging the rigor of Big 4 consulting
+                    <h1 class="hero-title">Change the way <br><span class="text-gradient">consulting is done</span></h1>
+                    <p class="hero-subtitle">Bridging the rigor of Big 4 consulting
                         with the agility of a global tech
                         startup. We deliver tech-enabled solutions across national borders.</p>
-                    <div class="hero-cta tagline-hidden" id="hero-cta">
+                    <div class="hero-cta">
                         <a href="#services" class="btn btn-primary">Explore Services</a>
                         <a href="#founders" class="btn btn-secondary">Learn Why</a>
                     </div>
                 </div>
-                <div class="hero-visuals lego-hero-board">
-                    <div class="instruction-text" id="hero-instruction">↗ Assemble the pieces to begin</div>
-                    <button class="lego-reset-btn" id="hero-reset-btn">Reset</button>
-
-                    <div class="lego-grid-target" id="lego-grid-target">
-                        <div class="lego-slot" data-slot="arc"></div>
-                        <div class="lego-slot" data-slot="grc"></div>
-                        <div class="lego-slot" data-slot="scc"></div>
-                        <div class="lego-slot" data-slot="tech"></div>
-                    </div>
-
-                    <div class="hero-floating-cards" id="hero-scatter-container">
-                        <div class="lego-brick-draggable" data-service="arc" id="hero-brick-arc">
+                <div class="hero-visuals floating-cards-container">
+                    <div class="floating-card" style="--float-delay: 0s;">
+                        <div class="card-front">
                             <h3>ARC</h3>
                         </div>
-                        <div class="lego-brick-draggable" data-service="grc" id="hero-brick-grc">
+                        <div class="card-hover-text">Accounting & Reporting Consulting</div>
+                    </div>
+                    <div class="floating-card" style="--float-delay: 1.2s;">
+                        <div class="card-front">
                             <h3>GRC</h3>
                         </div>
-                        <div class="lego-brick-draggable" data-service="scc" id="hero-brick-scc">
+                        <div class="card-hover-text">Governance, Risk & Compliance</div>
+                    </div>
+                    <div class="floating-card" style="--float-delay: 2.5s;">
+                        <div class="card-front">
                             <h3>SCC</h3>
                         </div>
-                        <div class="lego-brick-draggable" data-service="tech" id="hero-brick-tech">
+                        <div class="card-hover-text">Sustainability & Climate Consulting</div>
+                    </div>
+                    <div class="floating-card" style="--float-delay: 3.8s;">
+                        <div class="card-front">
                             <h3>TECH</h3>
                         </div>
+                        <div class="card-hover-text">Technology Consulting</div>
                     </div>
                 </div>
             </div>
@@ -317,15 +316,18 @@
 
         <!-- Global Presence Section -->
         <section id="global-presence" class="global-presence"
-            style="position: relative; width: 100%; height: 1000px; display: flex; align-items: center; justify-content: center; overflow: hidden; background: var(--color-bg); transition: background 0.3s ease;">
-            <!-- Background Globe layer -->
-            <div id="globeViz" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+            style="position: relative; width: 100%; min-height: 1000px; display: flex; align-items: center; justify-content: center; overflow: hidden; background: #070720; transition: none;">
+            <!-- Full-section background wrapper -->
+            <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+                <!-- Globe renders offset below the header text -->
+                <div id="globeViz" style="position: absolute; top: 12%; left: 0; width: 100%; height: 75%;"></div>
             </div>
 
             <!-- Hovering Overlay Text -->
             <div
-                style="position: absolute; top: 10%; left: 50%; transform: translateX(-50%); text-align: center; pointer-events: none; width: 90%;">
-                <h2 class="section-title" style="margin-bottom: 1rem; text-shadow: 0 4px 10px rgba(0,0,0,0.8);">Global
+                style="position: absolute; top: 8%; left: 50%; transform: translateX(-50%); text-align: center; pointer-events: none; width: 90%; z-index: 10;">
+                <h2 class="section-title"
+                    style="margin-bottom: 1rem; text-shadow: 0 4px 10px rgba(0,0,0,0.8); color: #ffffff;">Global
                     <span class="text-gradient">Footprint</span>
                 </h2>
                 <p class="section-description"
