--- a/uniqus-website/index.html
+++ b/uniqus-website/index.html
@@ -278,7 +278,7 @@
                 <div class="founders-grid">
                     <div class="founder-card">
                         <div class="founder-avatar"
-                            style="background: url('https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png') center/cover;">
+                            style="background: url('https://bl-i.thgim.com/public/incoming/udch8g/article69489731.ece/alternates/FREE_1200/Mr.%20Jamil%20Khatri%20-%20Uniqus.jpg') center/cover;">
                         </div>
                         <h3>Jamil Khatri</h3>
                         <p class="founder-title">
@@ -295,7 +295,7 @@
                     </div>
                     <div class="founder-card">
                         <div class="founder-avatar"
-                            style="background: url('https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png') center/cover;">
+                            style="background: url('https://etimg.etb2bimg.com/thumb/msid-95014798,width-1200,height-900,resizemode-4/.jpg') center/cover;">
                         </div>
                         <h3>Sandip Khetan</h3>
                         <p class="founder-title">
@@ -358,31 +358,36 @@
 
                         <div class="plate-content active" id="plate-arc">
                             <div class="sub-service-brick animate-fly-in" style="--delay: 1;"
-                                data-title="Technical Accounting" data-desc="Complex standards & IPO advisory">
+                                data-title="Technical Accounting" data-desc="Complex standards & IPO advisory"
+                                data-ex-desc="Expert guidance and tailored solutions to help you succeed with all financial reporting stakeholders — including executive leadership, board, regulatory bodies, auditors, and investors. Covers complex transactions such as revenue contracts, hedging, stock-based incentives, expected credit loss assessments, and business combinations.">
                                 <span class="brick-studs"></span>
                                 <h5>Technical Accounting</h5>
                                 <p>Complex standards & IPO advisory</p>
                             </div>
                             <div class="sub-service-brick animate-fly-in" style="--delay: 2;"
-                                data-title="Finance Transformation" data-desc="Digitizing finance for scale">
+                                data-title="Finance Transformation" data-desc="Digitizing finance for scale"
+                                data-ex-desc="Helping organizations transform their finance functions with a focus on people, processes, and technology — addressing enhanced reporting requirements, tighter timelines, and the need for greater automation.">
                                 <span class="brick-studs"></span>
                                 <h5>Finance Transformation</h5>
                                 <p>Digitizing finance for scale</p>
                             </div>
                             <div class="sub-service-brick animate-fly-in" style="--delay: 3;" data-title="ICFR"
-                                data-desc="Internal controls over financial reporting">
+                                data-desc="Internal controls over financial reporting"
+                                data-ex-desc="Assisting clients in designing best-in-class internal controls and management testing. Expertise spans diverse frameworks including Sarbanes Oxley in the US, ICOFR requirements in the Middle East, and Internal Financial Controls in India.">
                                 <span class="brick-studs"></span>
                                 <h5>ICFR</h5>
                                 <p>Internal controls over financial reporting</p>
                             </div>
                             <div class="sub-service-brick animate-fly-in" style="--delay: 4;" data-title="Audit Support"
-                                data-desc="Financial statement preparation">
+                                data-desc="Financial statement preparation"
+                                data-ex-desc="Assistance with financial statement preparation and regulatory filings, supporting organizations through the increasingly complex and challenging reporting environment.">
                                 <span class="brick-studs"></span>
                                 <h5>Audit Support</h5>
                                 <p>Financial statement preparation</p>
                             </div>
                             <div class="sub-service-brick animate-fly-in" style="--delay: 5;" data-title="Stock Options"
-                                data-desc="Equity accounting & compliance">
+                                data-desc="Equity accounting & compliance"
+                                data-ex-desc="Stock Option Accounting & Regulatory/Tax Compliance. Covers complex transactions such as revenue contracts, hedging, stock-based incentives, expected credit loss assessments, and business combinations.">
                                 <span class="brick-studs"></span>
                                 <h5>Stock Options</h5>
                                 <p>Equity accounting & compliance</p>
@@ -391,31 +396,36 @@
 
                         <div class="plate-content" id="plate-grc">
                             <div class="sub-service-brick" style="--delay: 1;" data-title="Enterprise Risk"
-                                data-desc="Proactive risk identification & management">
+                                data-desc="Proactive risk identification & management"
+                                data-ex-desc="A comprehensive and systematic process applied strategically across the enterprise, designed to identify potential events that may affect the entity and measure and manage risks against its most critical objectives. Includes real-time risk visualization through customizable dashboards, risk prioritization models, and key risk indicator development aligned with business objectives.">
                                 <span class="brick-studs"></span>
                                 <h5>Enterprise Risk</h5>
                                 <p>Proactive risk identification & management</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 2;" data-title="SOX Compliance"
-                                data-desc="End-to-end SOX testing & documentation">
+                                data-desc="End-to-end SOX testing & documentation"
+                                data-ex-desc="Assisting clients in designing best-in-class internal controls and management testing. Expertise spans diverse frameworks including Sarbanes Oxley in the US, ICOFR requirements in the Middle East, and Internal Financial Controls in India.">
                                 <span class="brick-studs"></span>
                                 <h5>SOX Compliance</h5>
                                 <p>End-to-end SOX testing & documentation</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 3;" data-title="Corporate Governance"
-                                data-desc="Board-level governance frameworks">
+                                data-desc="Board-level governance frameworks"
+                                data-ex-desc="Tailored solutions to enhance resilience, reinforce internal controls, and ensure compliance with evolving regulations — embedding accountability and risk-awareness across the organization.">
                                 <span class="brick-studs"></span>
                                 <h5>Corporate Governance</h5>
                                 <p>Board-level governance frameworks</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 4;" data-title="Organizational Resilience"
-                                data-desc="Business continuity planning">
+                                data-desc="Business continuity planning"
+                                data-ex-desc="Refers to an organization's ability to anticipate, prepare for, respond to, and adapt to various disruptions or changes in its internal and external environment — ensuring continuity and sustainability while navigating uncertainties and crises.">
                                 <span class="brick-studs"></span>
                                 <h5>Organizational Resilience</h5>
                                 <p>Business continuity planning</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 5;" data-title="GRC Digitization"
-                                data-desc="Automated compliance via Risk UniVerse">
+                                data-desc="Automated compliance via Risk UniVerse"
+                                data-ex-desc="End-to-end compliance support helping organizations deploy platforms aimed at digitization and automation of GRC functions, enabling proactive regulatory adherence across jurisdictions.">
                                 <span class="brick-studs"></span>
                                 <h5>GRC Digitization</h5>
                                 <p>Automated compliance via Risk UniVerse</p>
@@ -424,31 +434,36 @@
 
                         <div class="plate-content" id="plate-scc">
                             <div class="sub-service-brick" style="--delay: 1;" data-title="ESG Strategy"
-                                data-desc="Materiality assessment & roadmap">
+                                data-desc="Materiality assessment & roadmap"
+                                data-ex-desc="Corporate Sustainability and Responsibility encompasses initiatives and practices aimed at integrating environmental, social, and governance matters into a company's business strategy and stakeholder interactions — identifying sustainability topics, framing strategy, and defining metrics for stakeholder communications.">
                                 <span class="brick-studs"></span>
                                 <h5>ESG Strategy</h5>
                                 <p>Materiality assessment & roadmap</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 2;" data-title="Climate Action"
-                                data-desc="Decarbonization & net-zero planning">
+                                data-desc="Decarbonization & net-zero planning"
+                                data-ex-desc="Services involving the development and execution of climate change strategies, decarbonization roadmap, and biodiversity assessment. Covers responsible resource use for a more sustainable future while focusing on financial impact — including Greenhouse Gas Accounting, Financed Emissions, and Science-Based Target Setting.">
                                 <span class="brick-studs"></span>
                                 <h5>Climate Action</h5>
                                 <p>Decarbonization & net-zero planning</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 3;" data-title="ESG Reporting"
-                                data-desc="GRI, ISSB, CSRD, TCFD, BRSR frameworks">
+                                data-desc="GRI, ISSB, CSRD, TCFD, BRSR frameworks"
+                                data-ex-desc="Services helping companies embed sustainability and ethical business practices into their stakeholder communications. Covers ESG assessments, peer benchmarking, and reporting under global standards including CSRD, ISSB, GRI, California Climate Laws, BRSR, and the US SEC Climate Disclosure Rule.">
                                 <span class="brick-studs"></span>
                                 <h5>ESG Reporting</h5>
                                 <p>GRI, ISSB, CSRD, TCFD, BRSR frameworks</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 4;" data-title="Sustainable Finance"
-                                data-desc="Green financing advisory">
+                                data-desc="Green financing advisory"
+                                data-ex-desc="Focuses on aligning investments with ESG goals to drive long-term, responsible growth — enabling businesses to identify and manage internal and external ESG opportunities and risks, implement effective strategies, and embed these changes into core business operations to ensure compliance and enhance transparency.">
                                 <span class="brick-studs"></span>
                                 <h5>Sustainable Finance</h5>
                                 <p>Green financing advisory</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 5;" data-title="ESG Training"
-                                data-desc="Team capability building programs">
+                                data-desc="Team capability building programs"
+                                data-ex-desc="An ESG Training and Awareness Program emphasizing the critical importance of ESG and sustainability principles across industries. Training pedagogy designed to enhance both theoretical understanding and practical implementation of ESG standards and frameworks such as GRI, ISSB, CSRD, and TCFD.">
                                 <span class="brick-studs"></span>
                                 <h5>ESG Training</h5>
                                 <p>Team capability building programs</p>
@@ -457,31 +472,36 @@
 
                         <div class="plate-content" id="plate-tech">
                             <div class="sub-service-brick" style="--delay: 1;" data-title="GenAI Adoption"
-                                data-desc="Enterprise AI governance & oversight">
+                                data-desc="Enterprise AI governance & oversight"
+                                data-ex-desc="GenAI adoption management with enterprise-grade oversight, compliance reporting, and forensic visibility into AI usage.">
                                 <span class="brick-studs"></span>
                                 <h5>GenAI Adoption</h5>
                                 <p>Enterprise AI governance & oversight</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 2;" data-title="Finance Automation"
-                                data-desc="Month-end close & reconciliation AI">
+                                data-desc="Month-end close & reconciliation AI"
+                                data-ex-desc="AI-powered month-end close automation, reconciliation, and deep ERP integration.">
                                 <span class="brick-studs"></span>
                                 <h5>Finance Automation</h5>
                                 <p>Month-end close & reconciliation AI</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 3;" data-title="Lease Accounting"
-                                data-desc="ASC 842 / IFRS 16 automation">
+                                data-desc="ASC 842 / IFRS 16 automation"
+                                data-ex-desc="End-to-end automation and compliance in lease accounting across ASC 842, IFRS 16, and GASB 87.">
                                 <span class="brick-studs"></span>
                                 <h5>Lease Accounting</h5>
                                 <p>ASC 842 / IFRS 16 automation</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 4;" data-title="GRC Automation"
-                                data-desc="Real-time risk & compliance platforms">
+                                data-desc="Real-time risk & compliance platforms"
+                                data-ex-desc="AI-driven, data-powered GRC automation delivering real-time visibility and scalability for evolving compliance and risk environments.">
                                 <span class="brick-studs"></span>
                                 <h5>GRC Automation</h5>
                                 <p>Real-time risk & compliance platforms</p>
                             </div>
                             <div class="sub-service-brick" style="--delay: 5;" data-title="Spend Management"
-                                data-desc="Procurement & accounting integration">
+                                data-desc="Procurement & accounting integration"
+                                data-ex-desc="Smarter financial operations by integrating spend management, procurement, and automated accounting.">
                                 <span class="brick-studs"></span>
                                 <h5>Spend Management</h5>
                                 <p>Procurement & accounting integration</p>
